# descrow-mvp

./: .env.docker  .gitignore  DescrowContract.sol  INTEGRATION_COMPLETE.md  README.md  docker-compose.yml  package-lock.json  package.json  start.sh
backend/: .env.example  README.md  package-lock.json  package.json  schema.sql
backend/migrations/: add_email_name.sql
backend/src/: index.ts
backend/src/config/: database.ts
backend/src/middleware/: auth.ts
backend/src/routes/: auth.ts  index.ts  orders.ts  seller.ts
backend/src/services/: blockchain.service.ts
backend/src/types/: index.ts
descrow_contract/: Cargo.toml  lib.rs
descrow_solidity/: README.md  package-lock.json  package.json
descrow_solidity/contracts/: descrow_mvp.sol
docs/: BACKEND_ARCHITECTURE.md  DEPLOYMENT.md  DOCKER.md  EPIC_ISSUES.md  FRONTEND_ARCHITECTURE.md  PROJECT_SUMMARY.md  README.md  project_breakdown.md
docs/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/api/: API_REFERENCE.md
docs/architecture/: SYSTEM_INTEGRATION.md  WEB3_ARCHITECTURE.md
docs/contributing/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
docs/guides/: DEPLOYMENT.md  DEVELOPMENT.md  GETTING_STARTED.md
frontend/: .env.production  BACKEND_INTEGRATION_GUIDE.md  FEATURES.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  README.md  USER_FLOWS.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
web3/: .env.example  README.md  hardhat.config.js  package-lock.json  package.json
web3/contracts/: DescrowContract.sol  DescrowFactory.sol
web3/scripts/: debug-contract.js  debug.js  deploy-factory.js  deploy.js
(+19 files in other folders)
